<resources>
    <string name="app_name">뚜벅이</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="info1">Visit Buggy WebSite</string>
    <string name="info2">We love any feedback \n Send us E-mail</string>
    <string name="info3">Tutorial \n Buggy will be best friend during your travel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fragment__search_result">fragment_SearchResult</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Tour spot </string>
    <string name="tab_text_3">Cultural Facility </string>
    <string name="tab_text_4">Event</string>
    <string name="tab_text_5">Course</string>
    <string name="tab_text_6">Leports</string>
    <string name="tab_text_7">Accommodation</string>
    <string name="tab_text_8">Shopping</string>
    <string name="tab_text_9">Food</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="item_1">Create</string>
    <string name="item_2">Bucketlist</string>
    <string name="item_3">Info</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
