<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/loginpage"
    tools:context=".Reccommend">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:background="#1a4a83"
        android:theme="@style/AppTheme.AppBarOverlay">

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:layout_weight="1"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--app:layout_scrollFlags="scroll|enterAlways"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
            <!--app:title="@string/app_name">-->

        <!--</android.support.v7.widget.Toolbar>-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/regionList"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:entries="@array/province"
                />

            <Spinner
                android:id="@+id/sigunguList"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/regionList"
               />

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="#1a4a83"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:fontFamily="@font/enjoy"
                android:textSize="20sp"
                android:text="추천" />
        </RelativeLayout>


        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@android:color/holo_orange_light">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabTourSpot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabCultural"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_4" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_5" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabLeport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_6" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabAccommodation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_7" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabShopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_8" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_9" />
            </android.support.design.widget.TabLayout>
        </HorizontalScrollView>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <!-- 소윤소윤 : 요기 플로팅 버튼 부분 이모티콘 바꿔주세요~~~~~~-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addRecom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="26dp"
        android:src="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>