<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/loginpage"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ItemThreeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="4"
        android:background="#c6ffffff">

        <ImageView
            android:layout_width="109dp"
            android:layout_height="102dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:clickable="true"
            android:drawableLeft="@drawable/resize_web"
            android:gravity="center_vertical|center_horizontal"
            android:padding="20dp"
            android:text="@string/info1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/resize_email"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:padding="20dp"
            android:text="@string/info2"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/info3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:drawableLeft="@drawable/resize_developer"
            android:padding="20dp"
            android:text="@string/info3"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>

